--- a/.github/workflows/health-report.yml
+++ b/.github/workflows/health-report.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     # `0 23 * * *` 表示UTC 23:00，即北京时间7:00打卡（经测试，实际运行时间比设定时间晚几分钟到几十分钟）。
     # 可以参考 https://crontab.guru/ 进行配置
-    - cron: '0 23 * * *'
+    - cron: '0 24 * * *'
 
 jobs:
   main:
@@ -24,6 +24,16 @@ jobs:
             # 如果出现登录异常，可以配置 ZJU_COOKIE secret，请参考 https://github.com/upupming/zhr-action#%E7%99%BB%E5%BD%95%E5%BC%82%E5%B8%B8 获取 ZJU_COOKIE 的值
             cookie_eai_sess: ZJU_COOKIE2
             dingtalk_token: DINGTALK_TOKEN2
+          - username: ZJU_USERNAME3
+            password: ZJU_PASSWORD3
+            # 如果出现登录异常，可以配置 ZJU_COOKIE secret，请参考 https://github.com/upupming/zhr-action#%E7%99%BB%E5%BD%95%E5%BC%82%E5%B8%B8 获取 ZJU_COOKIE 的值
+            cookie_eai_sess: ZJU_COOKIE3
+            dingtalk_token: DINGTALK_TOKEN3
+          - username: ZJU_USERNAME4
+            password: ZJU_PASSWORD4
+            # 如果出现登录异常，可以配置 ZJU_COOKIE secret，请参考 https://github.com/upupming/zhr-action#%E7%99%BB%E5%BD%95%E5%BC%82%E5%B8%B8 获取 ZJU_COOKIE 的值
+            cookie_eai_sess: ZJU_COOKIE4
+            dingtalk_token: DINGTALK_TOKEN4
     steps:
       - name: 打卡
         uses: upupming/zhr-action@release
