--- a/.github/workflows/health-report.yml
+++ b/.github/workflows/health-report.yml
@@ -14,11 +14,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - username: ZJU_USERNAME
-            password: ZJU_PASSWORD
+          #- username: ZJU_USERNAME
+          #  password: ZJU_PASSWORD
             # 如果出现登录异常，可以配置 ZJU_COOKIE secret，请参考 https://github.com/upupming/zhr-action#%E7%99%BB%E5%BD%95%E5%BC%82%E5%B8%B8 获取 ZJU_COOKIE 的值
-            cookie_eai_sess: ZJU_COOKIE
-            dingtalk_token: DINGTALK_TOKEN
+          #  cookie_eai_sess: ZJU_COOKIE
+          #  dingtalk_token: DINGTALK_TOKEN
           - username: ZJU_USERNAME2
             password: ZJU_PASSWORD2
             # 如果出现登录异常，可以配置 ZJU_COOKIE secret，请参考 https://github.com/upupming/zhr-action#%E7%99%BB%E5%BD%95%E5%BC%82%E5%B8%B8 获取 ZJU_COOKIE 的值
